# testhsscript

./: .gitignore  README.markdown  test.hs  testhsscript.cabal
lib/: Test.hs
